<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SignUpActivity" >
<ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/imageView1" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

    <TextView
        android:id="@+id/signUpInstructionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/sign_up_label_instructions" />

    <TextView
        android:id="@+id/signupUsernameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/signUpInstructionLabel"
        android:layout_below="@+id/signUpInstructionLabel"
        android:text="@string/username" />

    <EditText
        android:id="@+id/signUpUsernameField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/signupUsernameLabel"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/signupUsernameLabel"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/signUpPasswordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/signUpUsernameField"
        android:layout_below="@+id/signUpUsernameField"
        android:text="@string/password" />

    <EditText
        android:id="@+id/signUpPasswordField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/signUpPasswordLabel"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/signUpPasswordLabel"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/goToSignUpActivityButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/signUpPasswordField"
        android:onClick="signUp"
        android:text="@string/sign_up_button" />

</RelativeLayout></ScrollView>
</RelativeLayout>
